# odp-thunderx

./: .gitignore  LICENSE  README  README.md  bind.sh  configure.ac  l2fwd.sh  pktgen.sh  validate.conf  validate.sh  validate_pktio.sh
example/: Makefile.am  Makefile.inc
example/generator/: odp_generator.c
example/m4/: configure.m4
example/pktgen/: Makefile.am  pktgen.c
helper/: Makefile.am  linux.c
platform/linux-generic/: Makefile.am  odp_buffer.c  odp_classification.c  odp_cpumask.c  odp_crypto.c  odp_init.c  odp_packet.c  odp_packet_flags.c  odp_packet_io.c  odp_pool.c  odp_queue.c  odp_schedule_ordered.c  odp_shared_memory.c  odp_system_info.c  odp_traffic_mngr.c
platform/linux-generic/include/: odp_buffer_inlines.h  odp_buffer_internal.h  odp_classification_datamodel.h  odp_classification_inlines.h  odp_config_internal.h  odp_crypto_internal.h  odp_debug_internal.h  odp_internal.h  odp_packet_internal.h  odp_packet_io_internal.h  odp_pool_internal.h  odp_shm_internal.h
platform/linux-generic/pktio/: ethtool.c  io_ops.c  ipc.c  socket.c  socket_mmap.c  tap.c
platform/linux-thunder/: Makefile.am  Makefile.inc  odp_buffer.c  odp_errno.c  odp_init.c  odp_packet.c  odp_packet_flags.c  odp_pool.c  odp_schedule_ordered.c  odp_schedule_sp.c  odp_thread.c  odp_time.c  pktio
platform/linux-thunder/include/: odp  odp_buffer_inlines.h  odp_buffer_internal.h  odp_config_internal.h  odp_crypto_internal.h  odp_packet_dpdk.h  odp_packet_internal.h  (+7 more)
test/performance/: odp_l2fwd.c
test/validation/: Makefile.inc
test/validation/shmem/: Makefile.am
(+44 files in other folders)
